# acervo

./: .env.example  .gitignore  404.html  ARCHITECTURE_AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  acervo_dependency_graph.mermaid  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
ARCHITECTURE/: index.html
UNIFIED_GRAPH_VERIFICATION/: index.html
acervo/: THIRD_PARTY.md  __init__.py  __main__.py  _text.py  cli.py  config.py  context_builder.py  context_index.py  curator.py  dependency_resolver.py  extractor.py  facade.py  file_ingestor.py  graph.py  graph_cli.py  graph_synthesizer.py  indexer.py  infra_prompt.py  layers.py  llm.py  log_config.py  metrics.py  ontology.py  openai_client.py  project.py  proxy.py  query_planner.py  s1_5_graph_update.py  s1_unified.py  semantic_enricher.py  services.py  session_summarizer.py  specificity.py  structural_parser.py  synthesizer.py  token_counter.py  topic_detector.py  vector_store.py
acervo/adapters/: chroma_store.py  ladybug_store.py  openai_client.py
acervo/cli/: __init__.py  chunks_cli.py  main.py
acervo/context/: __init__.py  context_builder.py  context_index.py  specificity.py  synthesizer.py
acervo/domain/: __init__.py  models.py  pipeline.py  s15_updater.py  s1_extractor.py  s2_activator.py  s3_assembler.py
acervo/extraction/: __init__.py  dedup_helpers.py  edge_resolution.py  entity_resolution.py  extractor.py  pydantic_schemas.py  temporal.py
acervo/graph/: __init__.py  ids.py  layers.py  ontology.py  ontology_validator.py  topic_graph.py  (+1 more)
benchmark-guide/: index.html
benchmarks/: index.html
configuration/: index.html
contributing/: index.html
docs/: ARCHITECTURE.md  UNIFIED_GRAPH_VERIFICATION.md  benchmark-guide.md  benchmarks.md  configuration.md  contributing.md  document-ingestion.md  finetune_v3_prompt.md  getting-started.md  graph-cli.md  index.md  layers.md  roadmap.md  scaling-benchmarks.md  testing.md  traces.md  tutorial.md
document-ingestion/: index.html
examples/: chat.py  web_search.py
getting-started/: index.html
graph-cli/: index.html
layers/: index.html
roadmap/: index.html
scaling-benchmarks/: index.html
scripts/: debug_extraction.py  generate_demo.py  migrate_bi_temporal.py  migrate_to_ladybug.py  test_prompt_quick.py
search/: search_index.json
tests/: conftest.py  test_dedup_helpers.py  test_document_ingestion.py  test_edge_resolution.py  test_entity_resolution.py  test_extractor.py  test_facade.py  test_fact_dedup_embeddings.py  test_file_ingestor.py  test_fusion.py  test_graph.py  test_hybrid_search.py  test_ladybug_phase2.py  test_ladybug_store.py  test_layers.py  test_metrics.py  test_ontology.py  test_ontology_validator.py  test_openai_client_dialects.py  test_pipeline_orphan_facts.py  test_reindexer.py  test_s1_5_prompt_injection.py  test_s1_confidence_and_promotion.py  test_s1_embed_entities.py  test_self_merge_regression.py  test_specificity.py  test_structural_parser.py  test_synthesizer.py  test_temporal.py
traces/: index.html
tutorial/: index.html
(+167 files in other folders)
