[project]
name = "acervo"
version = "0.1.0"
description = "Layered memory for AI agents. Graph-based context engine with universal knowledge and personal user layers."
license = {text = "Apache-2.0"}
authors = [{name = "Sandy Veliz", email = "sandy.e.veliz@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    # graph.py — pure stdlib, no extra deps
    # extractor.py — requires model_router and utils from the host project (avs-agents)
    # These are the PyPI deps used indirectly:
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["acervo"]
