[project]
name = "acervo"
version = "0.1.0"
description = "Layered memory for AI agents. Graph-based context engine with universal knowledge and personal user layers."
license = {text = "Apache-2.0"}
authors = [{name = "Sandy Veliz", email = "sandy.e.veliz@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
docs = ["mkdocs-material"]
dev = ["pytest", "pytest-asyncio", "mkdocs-material"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: requires a running LLM server (deselect with -m 'not integration')",
]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["acervo"]
