[project]
name = "acervo"
version = "0.1.2"
description = "Context proxy for AI agents. Enriches LLM context from a knowledge graph, extracts knowledge from responses."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Sandy Veliz", email = "sandy.e.veliz@gmail.com"}]
requires-python = ">=3.11"
keywords = ["ai", "agents", "memory", "knowledge-graph", "llm", "context", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/sandyeveliz/acervo"
Documentation = "https://sandyeveliz.github.io/acervo"
Repository = "https://github.com/sandyeveliz/acervo"
Issues = "https://github.com/sandyeveliz/acervo/issues"
Changelog = "https://github.com/sandyeveliz/acervo/blob/main/CHANGELOG.md"

[project.optional-dependencies]
docs = ["mkdocs-material"]
dev = ["pytest", "pytest-asyncio", "mkdocs-material"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: requires a running LLM server (deselect with -m 'not integration')",
]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["acervo"]
